# hex

./: .dockerignore  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  VERSIONS  demo.tape  install.sh  setup.sh
.githooks/: pre-push
.hex/evolution/: README.md
.hex/landings/: TEMPLATE.md
.hex/memory/: index.py  save.py  search.py
.hex/standing-orders/: defaults.md
adapter/policy-templates/: agent-performance-review-weekly.yaml  budget-period-reset.yaml  fleet-pulse.yaml  mike-pending-escalator.yaml  stalled-initiative-monitor.yaml
docs/: hex-events.md  initiative-driven-operations.md  integrations.md  multi-agent.md  testing.md  versioning.md
docs/extensibility/: competitive-analysis.md  hex-ui-extensions.md  proposal.md
system/events/: db.py  (+3 more)
system/harness/: Cargo.toml  build.rs
system/harness/src/: assets.rs  audit.rs  charter.rs  claude.rs  comments.rs  cost.rs  events.rs  gate.rs  lib.rs  main.rs  message.rs  messaging.rs  prompt.rs  queue.rs  server.rs  sse.rs  state.rs  telemetry.rs  types.rs  wake.rs
system/harness/tests/: charter_test.rs  claude_test.rs  gate_test.rs  loop_detection_test.rs  prompt_test.rs  queue_test.rs  state_test.rs
templates/: CLAUDE.md  decision-template.md
tests/: Dockerfile  Dockerfile.fullstack  test-doctor-events-coverage.sh  test-upgrade-binary-swap.sh  test-upgrade-deletion.sh  test_e2e.sh  test_env_resolution.sh  test_fullstack.sh  test_hex.py  test_hex_doctor_version_sync.bats  test_memory.py  test_path_mapping.bats  test_release_gates.sh  test_upgrade_layouts.bats
(+249 files in other folders)
